--- a/src/scss/components/cabinet-content.scss
+++ b/src/scss/components/cabinet-content.scss
@@ -1,5 +1,5 @@
 .cabinet-content {
-  background: $bg;
+  background: #f1f5f9;
   flex: 1 1 auto;
   padding: 36px 30px 0 128px;
   @media screen and (max-width: 1549px) {
